--- a/index.html
+++ b/index.html
@@ -9,45 +9,41 @@
     <title>rye1's Website</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <link href="https://xn--6pw65a019d.xyz/favicon.ico/direct" rel="icon">
-    <link href="https://xn--6pw65a019d.xyz/favicon.ico/direct" rel="apple-touch-icon">
+    <link href="favicon.ico" rel="icon">
+    <link href="favicon.ico" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="https://xn--6pw65a019d.xyz/5ADzN/direct" rel="stylesheet">
-    <link href="https://xn--6pw65a019d.xyz/nBnGc/direct" rel="stylesheet">
-    <link href="https://xn--6pw65a019d.xyz/HygBz/direct" rel="stylesheet">
+    <link href="assets\vendor\aos\aos.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="assets\vendor\bootstrap-icons\bootstrap-icons.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://xn--6pw65a019d.xyz/QaZIA/direct" rel="stylesheet">
-    <link href="https://xn--6pw65a019d.xyz/nU9Y4/direct" rel="stylesheet">
-    <link href="https://xn--6pw65a019d.xyz/XY52h/direct" rel="stylesheet">
+    <link href="assets\vendor\glightbox\css\glightbox.min.css" rel="stylesheet">
+    <link href="assets\vendor\swiper\swiper-bundle.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <!-- HTML Meta Tags -->
     <title>rye's basement</title>
     <meta name="description" content="Spanish or Vanish!">
-
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="rye1.lol">
     <meta itemprop="description" content="Spanish or Vanish!">
-    <meta itemprop="image" content="https://xn--6pw65a019d.xyz/5ojCu/direct">
-
+    <meta itemprop="image" link="images\direct.png">
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://xn--6pw65a019d.xyz/">
+    <meta property="og:url" content="http://localhost:3000">
     <meta property="og:type" content="website">
     <meta property="og:title" content="rye1.lol">
     <meta property="og:description" content="Spanish or Vanish!">
-    <meta property="og:image" content="https://xn--6pw65a019d.xyz/5ojCu/direct">
-
+    <meta property="og:image" content="images\direct.png">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="rye1.lol">
     <meta name="twitter:description" content="Spanish or Vanish!">
-    <meta name="twitter:image" content="https:/pedos.rye1.lol/5ojCu/direct">
+    <meta name="twitter:image" content="images\direct.png">
 </head>
 
 <body>
     <div class="feeding">
-
         <style>
             .feeding {
-                cursor: url('https://xn--6pw65a019d.xyz/oval.png'), auto;
+                cursor: url('https://pedos.rye1.lol/oval.png'), auto;
             }
         </style>
         <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -80,7 +76,7 @@
                     <div class="row">
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box iconbox-blue">
-                                <div class="icon"><img src="https://xn--6pw65a019d.xyz/LZCvb/direct" class="img-fluid" alt="Responsive image"></div>
+                                <div class="icon"><img src="images\crepper.png" class="img-fluid" alt="Responsive image"></div>
                                 <!--GTA5-->
                                 <h4><a>Minecraft Server</a></h4>
                                 <p>(has epic)</p><br>
@@ -95,7 +91,7 @@
                         </div>
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                             <div class="icon-box iconbox-orange">
-                                <div class="icon"><img src="https://xn--6pw65a019d.xyz/LGnYz/direct" class="img-fluid" alt="Responsive image"></div>
+                                <div class="icon"><img src="images\server.png" class="img-fluid" alt="Responsive image"></div>
                                 <!--Image Server-->
                                 <h4><a>Image Server</a></h4>
                                 <p>You are currently on the image server!</p><br>
@@ -115,7 +111,7 @@
                         <!--minecraft server-->
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                             <div class="icon-box iconbox-orange">
-                                <div class="icon"><img src="https://xn--6pw65a019d.xyz/wlvCo/direct" class="img-fluid" alt="Responsive image"></div>
+                                <div class="icon"><img src="images\discord.png" class="img-fluid" alt="Responsive image"></div>
                                 <h4><a>Discord Music Bot</a></h4>
                                 <p>A discord music bot, you can find it in my discord server and you can invite it to your own server.</p><br>
                                 <h3>Features</h3><br>
@@ -173,16 +169,16 @@
                 <div class="copyright">&copy; made by<strong><span> rye1</span></strong>.</div>
         </footer>
         <div id="preloader"></div><a href="" class="back-to-top d-flex align-items-center justify-content-center"><i>^</i></a>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
-        <script src="https://xn--6pw65a019d.xyz/direct"></script>
+        <script src="assets\vendor\purecounter\purecounter.js"></script>
+        <script src="assets\vendor\aos\aos.js"></script>
+        <script src="assets\vendor\bootstrap\js\bootstrap.bundle.min.js"></script>
+        <script src="assets\vendor\glightbox\js\glightbox.min.js"></script>
+        <script src="assets\vendor\isotope-layout\isotope.pkgd.min.js"></script>
+        <script src="assets\vendor\swiper\swiper-bundle.min.js"></script>
+        <script src="assets\vendor\typed.js\typed.min.js"></script>
+        <script src="assets\vendor\waypoints\noframework.waypoints.js"></script>
+        <script src="assets\vendor\php-email-form\validate.js"></script>
+        <script src="assets\js\main.js"></script>
         </div>
 </body>
 
