--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <title>rye1's Website</title>
+    <title>地下室の毳海豚</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="favicon.ico" rel="icon">
@@ -20,14 +20,14 @@
     <link href="assets\vendor\swiper\swiper-bundle.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <!-- HTML Meta Tags -->
-    <title>rye's basement</title>
+    <title>地下室の毳海豚</title>
     <meta name="description" content="Spanish or Vanish!">
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="rye1.lol">
     <meta itemprop="description" content="Spanish or Vanish!">
     <meta itemprop="image" link="images\direct.png">
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="http://localhost:3000">
+    <meta property="og:url" content="http://localhost:5000">
     <meta property="og:type" content="website">
     <meta property="og:title" content="rye1.lol">
     <meta property="og:description" content="Spanish or Vanish!">
@@ -50,9 +50,9 @@
         <header id="header" class="d-flex flex-column justify-content-center">
             <nav id="navbar" class="navbar nav-menu">
                 <ul>
-                    <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i><span>Home</span></a></li>
-                    <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i><span>Services</span></a></li>
-                    <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i><span>Contact</span></a></li>
+                    <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i><span>家</span></a></li>
+                    <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i><span>役</span></a></li>
+                    <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i><span>觸</span></a></li>
                     </a>
                     </li>
                 </ul>
@@ -60,32 +60,32 @@
         </header>
         <section id="hero" class="d-flex flex-column justify-content-center">
             <div class="container" data-aos="zoom-in" data-aos-delay="50">
-                <h1>rye1</h1>
-                <p>I am a <span class="typed" data-typed-items="programmer., sysadmin., pc builder."></span></p>
+                <h1>毳海豚</h1>
+                <p>おれは<span class="typed" data-typed-items="ハッカー., プログラマ., システム管理者."></span></p>
                 <div class="social-links">
-                    <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>--><a href="https://www.youtube.com/channel/UC1vYy31hVUkyL5toyWl74zw"><i class='bx bxl-youtube'></i></a></div>
+                    <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>--><a href="https://www.youtube.com/watch?v=JoC3EU_H2tc"><i class='bx bxl-youtube'></i></a></div>
             </div>
         </section>
         <main id="main">
             <section id="services" class="services">
                 <div class="container" data-aos="rye-up">
                     <div class="section-title">
-                        <h2>Stuff</h2>
-                        <p style="color:#ccc">Here is some of the stuff that I host</p>
+                        <h2>マルウェア</h2>
+                        <p style="color:#ccc">ここに私が作ったいくつかのマルウェアがあります</p>
                     </div>
                     <div class="row">
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box iconbox-blue">
                                 <div class="icon"><img src="images\crepper.png" class="img-fluid" alt="Responsive image"></div>
                                 <!--GTA5-->
-                                <h4><a>Minecraft Server</a></h4>
-                                <p>(has epic)</p><br>
-                                <h3>Features</h3><br>
-                                <h6><i style="color:#ccc"></i>Datapacks</h6>
-                                <p>We have some datapacks on the server that make it run smoother and provide a better gaming experience.</p><br>
+                                <h4><a>ランサムウェア</a></h4>
+                                <p>基本的にはソケットを使用して攻撃者と通信するランサムウェアスクリプトであり、dir内のすべてのファイルを暗号化するpythonの暗号化は暗号化</p><br>
+                                <h3>パイソン図書館</h3><br>
+                                <h6><i style="color:#ccc"></i>ソケット</h6>
+                                <p>パイソンソケットは、双方向通信チャネルのエンドポイントです.</p><br>
                                 <h6>
-                                    <i style="color:#ccc"></i>Multiplayer Sleep</h6>
-                                <p>Only one person has to sleep in the server for it to change to day.</p><br>
+                                    <i style="color:#ccc"></i>暗号化だフェネット</h6>
+                                <p>フェネットは、データに対称暗号化と認証を提供するレシピです</p><br>
                                 <h6>
                             </div>
                         </div>
@@ -93,34 +93,29 @@
                             <div class="icon-box iconbox-orange">
                                 <div class="icon"><img src="images\server.png" class="img-fluid" alt="Responsive image"></div>
                                 <!--Image Server-->
-                                <h4><a>Image Server</a></h4>
-                                <p>You are currently on the image server!</p><br>
-                                <h3>Features</h3><br>
+                                <h4><a>ボットネット</a></h4>
+                                <p>リナックス、ウィンドウズ、MacOSでほとんどすべてのcliコマンドを実行できるパイソンのソケットを使用したボットネット</p><br>
+                                <h3>パイソン図書館</h3><br>
                                 <h6>
-                                    <i style="color:#ccc"></i>Embeds</h6>
-                                <p>You can customize the embed of what pops up when you take a picture.</p><br>
+                                    <i style="color:#ccc"></i>暗号化だフェネット</h6>
+                                <p>パイソンソケットは、双方向通信チャネルのエンドポイントです.</p><br>
                                 <h6>
-                                    <i style="color:#ccc"></i>Privacy</h6>
-                                <p>rye1.lol cares about your privacy, we have a strict deletion policy where if you request for your data to be removed, we will remove all data related to your account.</p><br>
-                                <h6>
-                                    <i style="color:#ccc"></i>Cloud</h6>
-                                <p>rye1.lol will host your images for you, simply contact my discord and we can work something out!</p><br>
-                                <h6>
-                                    <i style="color:#ccc"></i></div>
+                                    <i style="color:#ccc"></i>スローロリス</h6>
+                                <p>スローロリスをddosのツールとして使用しますが、基本的に他のものに置き換えることができます</p><br>
                         </div>
                         <!--minecraft server-->
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                             <div class="icon-box iconbox-orange">
                                 <div class="icon"><img src="images\discord.png" class="img-fluid" alt="Responsive image"></div>
-                                <h4><a>Discord Music Bot</a></h4>
-                                <p>A discord music bot, you can find it in my discord server and you can invite it to your own server.</p><br>
+                                <h4><a>キーロガー</a></h4>
+                                <p>攻撃者とpynputと通信するためにソケットを使用してキーロギングスクリプト。キーストロークをリッスンするキーボード</p><br>
                                 <h3>Features</h3><br>
                                 <h6>
-                                    <i style="color:#ccc"></i>Youtube streaming</h6>
-                                <p>My discord music bot has the ability to play music from youtube.</p><br>
+                                    <i style="color:#ccc"></i>暗号化だフェネット</h6>
+                                <p>パイソンソケットは、双方向通信チャネルのエンドポイントです.</p><br>
                                 <h6>
-                                    <i style="color:#ccc"></i>(everything else every other bot has)</h6>
-                                <p>Exactly what I said above.</p><br>
+                                    <i style="color:#ccc"></i>pynput</h6>
+                                <p>pynputは、キーボード入力をキャプチャするために使用できるPythonのライブラリです</p><br>
                                 <h6>
                                     <i style="color:#ccc"></i></h6>
                                 <p></p>
@@ -134,7 +129,7 @@
                 </div>
             </section>
             <div class="section-title" align-items-center>
-                <h2>Contact</h2>
+                <h2>觸</h2>
             </div>
             <h1 style="color:#fff"></h1>
             <h1 style="color:#fff"></h1>
@@ -146,27 +141,13 @@
                     <div class="section-title"></div>
                 </div>
             </section>
-            <div class="container-fluid text-center text-md-left">
-                <div class="row">
-                    <div class="col-md-6 mt-md-0 mt-3">
-                        <h5 style="color:#fff" class="text-uppercase font-weight-bold">Discord</h5>
-                        <p style="color:#ccc">You can easily contact me via Discord. my discord is rye#7685</p>
-                    </div>
-                    <hr class="clearfix w-100 d-md-none pb-3">
-                    <div class="col-md-6 mb-md-0 mb-3">
-                        <h5 style="color:#fff" class="text-uppercase font-weight-bold">Information</h5>
-                        <p style="color:#ccc">Join my discord and maybe you can find even more useless knowledge</p>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright text-center py-3"><iframe class="shadow p-3 mb-5 bg-body rounded" style="width:300px;filter:grayscale(100%)" src="https://discord.com/widget?id=838746635592531999&theme=dark" width="300" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
             </footer>
         </main>
         <footer id="footer">
             <div class="container">
                 <!--SC-->
                 <div class="social-links"></div>
-                <div class="copyright">&copy; made by<strong><span> rye1</span></strong>.</div>
+                <div class="copyright">&copy; によって作られた<strong><span> 毳海豚</span></strong>.</div>
         </footer>
         <div id="preloader"></div><a href="" class="back-to-top d-flex align-items-center justify-content-center"><i>^</i></a>
         <script src="assets\vendor\purecounter\purecounter.js"></script>
