--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                 <h6>
                                     <i style="color:#ccc"></i>スローロリス</h6>
                                 <p>スローロリスをddosのツールとして使用しますが、基本的に他のものに置き換えることができます</p><br>
+                            </div>
                         </div>
                         <!--minecraft server-->
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
