--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
         <script src="assets\vendor\php-email-form\validate.js"></script>
         <script src="assets\js\main.js"></script>
         </div>
-        <div style="width: 200px; z-index: 10; position: fixed; right: 135px; bottom: 10px; height: 83px;">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/track/7jtqdolGPAtqHMj05XHXKt?si=d50c7697d4a0442d" width="325" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jtqdolGPAtqHMj05XHXKt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </body>
 
 </html>
