--- a/index.html
+++ b/index.html
@@ -41,18 +41,13 @@
 
 <body>
     <div class="feeding">
-        <style>
-            .feeding {
-                cursor: url('https://pedos.rye1.lol/oval.png'), auto;
-            }
-        </style>
         <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
         <header id="header" class="d-flex flex-column justify-content-center">
             <nav id="navbar" class="navbar nav-menu">
                 <ul>
-                    <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i><span>家</span></a></li>
-                    <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i><span>役</span></a></li>
-                    <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i><span>觸</span></a></li>
+                    <li><a href="index.html#家" class="nav-link scrollto active"><i class="bx bx-home"></i><span>家</span></a></li>
+                    <li><a href="index.html#役" class="nav-link scrollto"><i class="bx bx-server"></i><span>役</span></a></li>
+                    <li><a href="index.html#觸" class="nav-link scrollto"><i class="bx bx-envelope"></i><span>觸</span></a></li>
                     </a>
                     </li>
                 </ul>
@@ -63,7 +58,7 @@
                 <h1>毳海豚</h1>
                 <p>おれは<span class="typed" data-typed-items="ハッカー., プログラマ., システム管理者."></span></p>
                 <div class="social-links">
-                    <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>--><a href="https://www.youtube.com/watch?v=JoC3EU_H2tc"><i class='bx bxl-youtube'></i></a></div>
+                    <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>--><a href="https://youtu.be/JoC3EU_H2tc?t=12"><i class='bx bxl-youtube'></i></a></div>
             </div>
         </section>
         <main id="main">
@@ -77,7 +72,6 @@
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box iconbox-blue">
                                 <div class="icon"><img src="images\crepper.png" class="img-fluid" alt="Responsive image"></div>
-                                <!--GTA5-->
                                 <h4><a>ランサムウェア</a></h4>
                                 <p>基本的にはソケットを使用して攻撃者と通信するランサムウェアスクリプトであり、dir内のすべてのファイルを暗号化するpythonの暗号化は暗号化</p><br>
                                 <h3>パイソン図書館</h3><br>
@@ -92,7 +86,6 @@
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                             <div class="icon-box iconbox-orange">
                                 <div class="icon"><img src="images\server.png" class="img-fluid" alt="Responsive image"></div>
-                                <!--Image Server-->
                                 <h4><a>ボットネット</a></h4>
                                 <p>リナックス、ウィンドウズ、MacOSでほとんどすべてのcliコマンドを実行できるパイソンのソケットを使用したボットネット</p><br>
                                 <h3>パイソン図書館</h3><br>
@@ -104,13 +97,12 @@
                                 <p>スローロリスをddosのツールとして使用しますが、基本的に他のものに置き換えることができます</p><br>
                             </div>
                         </div>
-                        <!--minecraft server-->
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                             <div class="icon-box iconbox-orange">
                                 <div class="icon"><img src="images\discord.png" class="img-fluid" alt="Responsive image"></div>
                                 <h4><a>キーロガー</a></h4>
                                 <p>攻撃者とpynputと通信するためにソケットを使用してキーロギングスクリプト。キーストロークをリッスンするキーボード</p><br>
-                                <h3>Features</h3><br>
+                                <h3>パイソン図書館</h3><br>
                                 <h6>
                                     <i style="color:#ccc"></i>暗号化だフェネット</h6>
                                 <p>パイソンソケットは、双方向通信チャネルのエンドポイントです.</p><br>
@@ -139,7 +131,6 @@
         </main>
         <footer id="footer">
             <div class="container">
-                <!--SC-->
                 <div class="social-links"></div>
                 <div class="copyright">&copy; によって作られた<strong><span> 毳海豚</span></strong>.</div>
         </footer>
@@ -155,7 +146,10 @@
         <script src="assets\vendor\php-email-form\validate.js"></script>
         <script src="assets\js\main.js"></script>
         </div>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jtqdolGPAtqHMj05XHXKt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <div style="width: 200px; z-index: 10; position: fixed; right: 135px; bottom: 10px; height: 83px;">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jtqdolGPAtqHMj05XHXKt?utm_source=generator&theme=0" width="325" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+        </div>
 </body>
 
 </html>
