--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <header id="header" class="d-flex flex-column justify-content-center">
             <nav id="navbar" class="navbar nav-menu">
                 <ul>
-                    <li><a href="index.html#家" class="nav-link scrollto active"><i class="bx bx-home"></i><span>家</span></a></li>
-                    <li><a href="index.html#役" class="nav-link scrollto"><i class="bx bx-server"></i><span>役</span></a></li>
-                    <li><a href="index.html#觸" class="nav-link scrollto"><i class="bx bx-envelope"></i><span>觸</span></a></li>
+                    <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i><span>家</span></a></li>
+                    <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i><span>役</span></a></li>
+                    <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i><span>觸</span></a></li>
                     </a>
                     </li>
                 </ul>
