--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>地下室の毳海豚</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <link href="images/favicon.ico" rel="icon">
-    <link href="images/favicon.ico" rel="apple-touch-icon">
+    <link href="favicon.ico" rel="icon">
+    <link href="favicon.ico" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link href="assets\vendor\aos\aos.css" rel="stylesheet">
     <link href="bootstrap.min.css" rel="stylesheet">
