--- a/fluff-seapig/index.html
+++ b/fluff-seapig/index.html
@@ -4,6 +4,19 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 <head>
+    <style>
+        .button1 {
+            color: white;
+            opacity: 100;
+        }
+        
+        .button1:hover {
+            color: white;
+            font-family: derk;
+            src: url(derk.otf);
+            opacity: 100;
+        }
+    </style>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <title>地下室の毳海豚</title>
@@ -40,8 +53,7 @@
 </head>
 
 <body>
-    <div class="feeding">
-        <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+    <div class="feeding"><i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
         <header id="header" class="d-flex flex-column justify-content-center">
             <nav id="navbar" class="navbar nav-menu">
                 <ul>
@@ -77,8 +89,7 @@
                                 <h3>パイソン図書館</h3><br>
                                 <h6><i style="color:#ccc"></i>ソケット</h6>
                                 <p>パイソンソケットは、双方向通信チャネルのエンドポイントです.</p><br>
-                                <h6>
-                                    <i style="color:#ccc"></i>暗号化だフェネット</h6>
+                                <h6><i style="color:#ccc"></i>暗号化だフェネット</h6>
                                 <p>フェネットは、データに対称暗号化と認証を提供するレシピです</p><br>
                                 <h6>
                             </div>
@@ -89,13 +100,10 @@
                                 <h4><a>ボットネット</a></h4>
                                 <p>リナックス、ウィンドウズ、MacOSでほとんどすべてのcliコマンドを実行できるパイソンのソケットを使用したボットネット</p><br>
                                 <h3>パイソン図書館</h3><br>
-                                <h6>
-                                    <i style="color:#ccc"></i>暗号化だフェネット</h6>
+                                <h6><i style="color:#ccc"></i>暗号化だフェネット</h6>
                                 <p>パイソンソケットは、双方向通信チャネルのエンドポイントです.</p><br>
-                                <h6>
-                                    <i style="color:#ccc"></i>スローロリス</h6>
-                                <p>スローロリスをddosのツールとして使用しますが、基本的に他のものに置き換えることができます</p><br>
-                            </div>
+                                <h6><i style="color:#ccc"></i>スローロリス</h6>
+                                <p>スローロリスをddosのツールとして使用しますが、基本的に他のものに置き換えることができます</p><br></div>
                         </div>
                         <div class="shadow p-3 mb-5 bg-body rounded col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                             <div class="icon-box iconbox-orange">
@@ -103,19 +111,18 @@
                                 <h4><a>キーロガー</a></h4>
                                 <p>攻撃者とpynputと通信するためにソケットを使用してキーロギングスクリプト。キーストロークをリッスンするキーボード</p><br>
                                 <h3>パイソン図書館</h3><br>
-                                <h6>
-                                    <i style="color:#ccc"></i>暗号化だフェネット</h6>
+                                <h6><i style="color:#ccc"></i>暗号化だフェネット</h6>
                                 <p>パイソンソケットは、双方向通信チャネルのエンドポイントです.</p><br>
-                                <h6>
-                                    <i style="color:#ccc"></i>pynput</h6>
-                                <p>pynputは、キーボード入力をキャプチャするために使用できるPythonのライブラリです</p><br>
-                            </div>
+                                <h6><i style="color:#ccc"></i>pynput</h6>
+                                <p>pynputは、キーボード入力をキャプチャするために使用できるPythonのライブラリです</p><br></div>
                         </div>
                     </div>
                 </div>
             </section>
             <div class="section-title" align-items-center>
-                <h2>觸</h2>
+                <a class="button button1" type="button" href="https://niggers4sale.rye1.lol">
+                    <h2>觸</h2>
+                </a>
             </div>
             <h1 style="color:#fff"></h1>
             <h1 style="color:#fff"></h1>
@@ -132,7 +139,8 @@
         <footer id="footer">
             <div class="container">
                 <div class="social-links"></div>
-                <div class="copyright">&copy; によって作られた<strong><span> 毳海豚</span></strong>.</div>
+                <div class="copyright">&copy; によって作られた
+                    <strong><span>毳海豚</span></strong>.</div>
         </footer>
         <div id="preloader"></div><a href="" class="back-to-top d-flex align-items-center justify-content-center"><i>^</i></a>
         <script src="assets\vendor\purecounter\purecounter.js"></script>
@@ -146,10 +154,8 @@
         <script src="assets\vendor\php-email-form\validate.js"></script>
         <script src="assets\js\main.js"></script>
         </div>
-        <div style="width: 200px; z-index: 10; position: fixed; right: 135px; bottom: 10px; height: 83px;">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jtqdolGPAtqHMj05XHXKt?utm_source=generator&theme=0" width="325" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"></iframe>
-        </div>
+        <div style="width: 200px; z-index: 10; position: fixed; right: 135px; bottom: 10px; height: 83px;"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jtqdolGPAtqHMj05XHXKt?utm_source=generator&theme=0" width="325" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe></div>
 </body>
 
 </html>
